plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'fur.yxs.mper'
version = '1.0-SNAPSHOT'

dependencies {
    // JUnit 5 完整配置
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.xerial:sqlite-jdbc:3.44.1.0'
    implementation 'org.slf4j:slf4j-simple:2.0.9'
    implementation 'com.google.code.gson:gson:2.13.2'
    implementation 'com.alibaba:fastjson:1.2.78'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
    //implementation 'org.jogamp.jogl:jogl-all-noawt:2.6.0'
    //implementation 'org.jogamp.jogl:jogl-all-main:2.6.0'
    //implementation 'org.jogamp.gluegen:gluegen-rt-main:2.6.0'
    //runtimeOnly "org.lwjgl:lwjgl:natives-windows"
    //runtimeOnly "org.lwjgl:lwjgl-glfw:natives-windows"
    //runtimeOnly "org.lwjgl:lwjgl-opengl:natives-windows"
    //implementation "org.lwjgl:lwjgl"
    //implementation "org.lwjgl:lwjgl-glfw"      // 窗口和输入管理
    //implementation "org.lwjgl:lwjgl-opengl"
}

repositories {
    maven { url 'https://maven.aliyun.com/repository/public' }
    maven { url 'https://maven.aliyun.com/repository/central' }
    maven { url 'https://maven.aliyun.com/repository/gradle-plugin/'}

    mavenCentral()
}

test {
    useJUnitPlatform()

    // 确保测试类被正确识别
    filter {
        includeTestsMatching "*Test"
    }

    testLogging {
        events "PASSED", "SKIPPED", "FAILED"
        exceptionFormat "full"
    }
}

// 配置 Java 版本
java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

application {
    mainClass = 'fur.yxs.mper.Main'
}

javafx {
    version = "17.0.6" // 指定你使用的 JavaFX 版本，例如 17 或 21
    modules = [ 'javafx.controls', 'javafx.fxml' ] // 在此列出你需要的模块
}

run {
    doFirst {
        File runDir = file('run')
        if (!runDir.exists()) {
            runDir.mkdirs()
        }
    }
    if (project.hasProperty('mainClass')) {
        mainClass = project.getProperty('mainClass')
    }
    workingDir = file('run')
    jvmArgs = [
            '--module-path', classpath.asPath,
            '--add-modules', 'javafx.controls,javafx.fxml'
    ]
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['-Xlint:deprecation']
}
